feat(api): let admins move a user's hive between that user's apiaries (#2)
